# Geometrical-Annihilation

.claude/: settings.local.json
client/: .gitignore  export_presets.cfg  icon.svg.import  project.godot
client/scenes/: commander.tscn  main.tscn
client/scripts/: commander.gd  commander.gd.uid  game.gd  game.gd.uid  ws_client.gd  ws_client.gd.uid
scripts/: install-export-templates.ps1  run-all.ps1  serve-web.py
server/: Cargo.toml
server/src/: color.rs  lib.rs  net.rs  protocol.rs  spawn.rs  tick.rs  world.rs
