[package]
name = "geometrical-annihilation"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.102"
futures-util = "0.3.32"
log = "0.4.29"
pretty_env_logger = "0.5.0"
rand = "0.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full"] }
tokio-tungstenite = "0.29.0"
tungstenite = "0.29.0"
uuid = { version = "1", features = ["v4", "serde"] }
